<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="16dp">
	
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:text="@string/configure" />
	
	<EditText
		android:id="@+id/appwidget_text"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="text" />
	
	<RadioGroup
		android:id="@+id/color_picker"
		android:layout_width="match_parent"
		android:layout_height="match_parent" >
		
		<RadioButton
			android:id="@+id/radioButton"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/red" />
		
		<RadioButton
			android:id="@+id/radioButton2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/orange" />
		
		<RadioButton
			android:id="@+id/radioButton3"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/yellow" />
		
		<RadioButton
			android:id="@+id/radioButton4"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/green" />
		
		<RadioButton
			android:id="@+id/radioButton5"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/lightblue" />
		
		<RadioButton
			android:id="@+id/radioButton6"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/blue" />
		
		<RadioButton
			android:id="@+id/radioButton7"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/purple" />
	</RadioGroup>
	
	<Button
		android:id="@+id/add_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/add_widget"
		android:onClick="onCreateWidgetButtonTapped"/>

</LinearLayout>